# nlp-us-patents

./: .env_example  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
us_patents/: callbacks.py  config.yaml  cpc_texts.py  data.py  download_data.sh  jarvislabs_setup.sh  metrics.py  train.py
