[tool.poetry]
name = "nlp-us-patents"
version = "0.0.1"
description = "NLP classification problem, trained on gpu"
authors = ["Lina <2519360+rmminusrslash@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
# great for schema validation
pydantic = "^1.10.7"
pandas = "^2.1.0" 
matplotlib = "^3.7.2"
python-dotenv = "^1.0.0"
kaggle = "^1.5.16"
hydra-core = "^1.3.2"
loguru = "^0.7.2"
tokenizers = "0.12.1"
transformers = "4.21.1"
protobuf = "3.20.1"
numpy = "1.26.0"
datasets = "^2.14.5"
jarviscloud = "^0.1"
dataset = "^1.6.2"
scipy = "^1.11.2"
scikit-learn = "^1.3.2"
wandb = "^0.16.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.3.1"
coverage = "^7.2.5"
pytest = "^7.3.1"
mypy = "^1.6.1"
ipykernel = "^6.25.1"
# put in dev since when running on a gpu instances torch is typically already installed
torch = {version = "^2.0.1+cpu", source = "pytorch-cpu"}
torchvision = {version = "^0.15.2+cpu", source = "pytorch-cpu"}


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
